# compatible-intrinsic-triangulations

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
data/bumpy-round-cube/: AtoB.txt  BtoA.txt
data/vase/: AtoB.txt  BtoA.txt
src/: bc_extractor.cpp  cit.hpp  core.cpp  event.cpp  global.cpp  main.cpp  om_viewer.cpp  optimizer.cpp  render.cpp  serialization.cpp  utility.cpp  utility.ipp  version.cpp.in
test/: test_angle.cpp  test_energy.cpp
